--- a/sobre.html
+++ b/sobre.html
@@ -119,5 +119,29 @@
 
       <img src="img/destaque-home.png" alt="Promoção: Big City Night">
     </div><!-- fim .container .destaque -->
+
+    <div class="container paineis">
+      <!-- os paineis de novidades e mais vendidos entrarão aqui -->
+
+      <section class="painel novidades">
+        <h2>Novidades</h2>
+        <ol>
+
+          <!-- primeiro produuto -->
+          <li>
+            <a href="produto.html">
+              <figure>
+                <img src="img/produtos/miniatura1.png">
+                <figcaption>Fuzz cardigan por R$ 129,90</figcaption>
+              </figure>
+          </a>
+          </li>
+
+          <!-- coloque mais produtos aqui! -->
+        </ol>
+      </section>
+    </div>
+
+
 </body>
 </html>
